Fixed Alignment issue is alert, and added bottom margin to alert component

--- a/web/html/src/branding/css/susemanager/components/alerts.less
+++ b/web/html/src/branding/css/susemanager/components/alerts.less
@@ -6,13 +6,17 @@
   padding: 8px;
   padding-left: 30px;
   border: none;
-  margin: 0;
+  margin: 0 0 15px 0;
 
   &:before {
     position: absolute;
     top: 8px;
     left: 8px;
     font-size: 14px;
+  }
+
+  ul {
+    padding-left: 15px;
   }
 }
 
